@@ -28,6 +28,13 @@
   <script src="../content_scripts/frames.js"></script>
   <script src="../content_scripts/messenger.js"></script>
 </head>
+<div>
+  <a target="blank" href="https://support.google.com/chrome/?p=help&ctx=keyboard#topic=7438008">Chrome Help</a>
+  <span> | </span>
+  <a target="blank" href="https://support.google.com/chrome/answer/157179?hl=en">Chrome Default Shortcuts</a>
+  <span> | </span>
+  <a target="blank" href="https://developers.google.com/web/tools/chrome-devtools/shortcuts">Chrome Devtools Shortcuts</a>
+</div>
 <h1>What is cVim?</h1>
 <p>Vim for Google Chrome. I hate using the mouse, especially after learning Vim. With my desktop (Linux), I have a lot
   of key bindings that make doing things easier: I open Chrome with <code>Alt+w</code>, I close a window with <code>Alt+Shift+d</code>,
